# assets_mpq_importer

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  COPYING  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md  README_docker.md  index.converter_dds_amdc.cpp.491ec990e71c9aab5747652219713451.html  index.converter_dds_nvtt.cpp.b3218374e96e5b4f0a87fc16e9e361eb.html  index.converter_obj.cpp.dc8bde5129cbe90b8004eb1266bd483c.html  index.converter_png.cpp.63fedcaafee12eea0fc8fad6a5059f4b.html  index.functions.html  index.html  index.importer.cpp.8ee07d7f80f98cfd1fe3fd5177c7bbdc.html  index.main.cpp.76d906539bfda7ebcf42069720f8fb61.html  index.main.cpp.bbc62b673d04a87a7f971bceaa438d67.html  index.mpq.cpp.360a5fbbcb056e27daad7fb352f10e92.html  index.mpq.hpp.1a92357ac9ef3bae3657a9b178d6ab5b.html  index.transformations.cpp.71a93302f2a330c8388f7ffc68c8a5c9.html  index.utils_blp.cpp.b86adfe11fb1b60502fe40f6cc5c147e.html  index.w3m.cpp.c626c5622e1c96fb92fb956a71380eb9.html  index.w3map.cpp.b193077d9a5a9e6e5e100623b0d9fb20.html  index.wavefront_obj.cpp.db065c10f091ea3599e6c32a2aa54c64.html  vcpkg.json
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/: constants.env
.github/actions/setup_cache/: action.yml
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
include/assets_mpq_importer/: assmpq.hpp  blp.hpp  mdlx.hpp  mpq.hpp  w3m.hpp
scripts/: mpq_import.bat  mpq_import.sh
src/: CMakeLists.txt
src/blp_library/: CMakeLists.txt  converter_dds_amdc.cpp  converter_dds_nvtt.cpp  converter_png.cpp  utils_blp.cpp  utils_blp.hpp
src/importer/: CMakeLists.txt  importer.cpp  importer.hpp  main.cpp
src/mdlx_library/: CMakeLists.txt  converter_obj.cpp
src/merger/: CMakeLists.txt  main.cpp  merger.hpp  transformations.cpp  w3map.cpp  wavefront_obj.cpp
src/mpq_library/: CMakeLists.txt  mpq.cpp
src/w3m_library/: CMakeLists.txt  w3m.cpp
test/: CMakeLists.txt  blp_library_tests.cpp  mdlx_library_tests.cpp  mpq_library_tests.cpp  test_utils.hpp  w3m_library_tests.cpp
test/testdata/: test_4v_4n_4t_2f.mdx  test_jpeg_1x1.blp  test_jpeg_32x32-no-mipmaps.blp  test_jpeg_32x32.blp  test_raw_32x32_paletted.blp  test_with_no_listfile.mpq  test_with_three_files.mpq
